[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LevelUp/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://UI/Assets/LevelUp/s_levelup_frame.png" type="Texture" id=2]
[ext_resource path="res://UI/Assets/LevelUp/s_levelup_bar.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/LevelUp/s_levelup.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "anim"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[node name="LevelUp" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="s_levelup_frame" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 3 )
hframes = 11
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/anim = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="s_levelup" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
